# lucid-memory

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  HOW_IT_WORKS.md  README.md  biome.json  clippy.toml  install.ps1  install.sh  package.json  rustfmt.toml  tsconfig.json  uninstall.ps1  uninstall.sh
.cargo/: config.toml
.github/workflows/: build-native.yml  ci.yml  publish.yml
.zed/: settings.json
benchmarks/: README.md  package.json
benchmarks/quality/: index.ts  membrane-comparison.ts  rag-comparison.ts  realistic-dev.ts  token-efficiency.ts
crates/lucid-core/: Cargo.toml
crates/lucid-core/benches/: activation.rs  retrieval.rs
crates/lucid-core/examples/: basic_retrieval.rs  spreading_activation.rs
crates/lucid-core/src/: activation.rs  embedding.rs  lib.rs  location.rs  retrieval.rs  spreading.rs  visual.rs
crates/lucid-napi/: Cargo.toml
crates/lucid-napi/src/: lib.rs
crates/lucid-perception/: Cargo.toml
crates/lucid-perception-napi/: Cargo.toml
crates/lucid-perception-napi/src/: lib.rs
crates/lucid-perception/src/: error.rs  lib.rs  pipeline.rs  scene.rs  transcribe.rs  video.rs
scripts/: lint-installers.sh  test-install.sh  test-mcp.sh
