[package]
name = "lucid-perception-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Node.js bindings for lucid-perception video processing"
readme = "../../README.md"
repository.workspace = true

keywords = ["napi", "nodejs", "video", "perception", "bindings"]
categories = ["api-bindings", "multimedia::video"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Lucid Perception core
lucid-perception = { path = "../lucid-perception", features = ["transcription"] }

# napi-rs bindings
napi = { workspace = true, features = ["async"] }
napi-derive = { workspace = true }

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread"] }

# Serialization
serde = { workspace = true }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[features]
default = []
cuda = ["lucid-perception/cuda"]

[lints]
workspace = true
